kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mock
spec:
  selector:
    app: mock
  type: NodePort
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
